<resources>
    <string name="app_name">Interface saisie</string>
	<string name="choice_1">choix 1</string>
	<string name="choice_2">choix 2</string>
	<string name="choice_3">choix 3</string>
	<string name="texteDesciption">Veuillez écrire votre mot</string>
	<string name="save_button">Valider mot</string>
	<string name="reset_button">Effacer mot</string>
	<string name="cancel_button">Annuler</string>
	<string name="textOff">Demonstration</string>
	<string name="textOn">Expert</string>

	<string name="ask">"Ceci est il votre mot ?"</string>
	<string name="with">" avec une probalitité de "</string>
	<string name="percent">" %."</string>
	<string name="save_success_1">"Image sauvegardé sous le nom de "</string>
	<string name="save_success_2">".png dans "</string>

	<string name="name_field_empty">Vous devez saisir un nom !</string>
	<string name="error_folder">"Erreur de création du dossier "</string>
	<string name="error_file">"Erreur de création de l'image "</string>
	<string name="error_sending">"Erreur d'envoi !"</string>
	<string name="error_server">"Erreur de connection avec le serveur !"</string>
	<string name="error_word">"Le mot n'a pas été trouvé !"</string>
</resources>
