<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
			  android:orientation="vertical">

		<com.example.etudiant.interfacesaisie.DrawingView
			android:id="@+id/scratch_pad"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"/>

		<LinearLayout
			android:id="@+id/choice_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/choice_1"
				style="@style/Widget.AppCompat.Button.Borderless"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/choice_1"
				android:textAlignment="center"
				android:textStyle="bold"
				android:visibility="invisible"/>

			<Button
				android:id="@+id/choice_2"
				style="@style/Widget.AppCompat.Button.Borderless"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/choice_2"
				android:textStyle="bold"
				android:visibility="invisible"/>

			<Button
				android:id="@+id/choice_3"
				style="@style/Widget.AppCompat.Button.Borderless"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/choice_3"
				android:textAlignment="center"
				android:textStyle="bold"
				android:visibility="invisible"/>
		</LinearLayout>

		<EditText
			android:id="@+id/editText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="textPersonName"
			android:maxLines="1"
			android:text="@string/name_field"
			android:textAlignment="center"
			tools:ignore="LabelFor"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/reset_button"
				style="@style/Widget.AppCompat.Button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/reset_button"/>

			<Button
				android:id="@+id/save_button"
				style="@style/Widget.AppCompat.Button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/save_button"/>
		</LinearLayout>

	</LinearLayout>
